test/commands/devops/mdsource/compare/force-apps/testCustomObject/srcmdt/objects/MDChildDifferentSharing.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Test__c</fullName>
        <formula>&quot;Test&quot;</formula>
        <label>Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <referenceTo>Parent</referenceTo>
        <relationshipLabel>Stuff</relationshipLabel>
        <relationshipName>Stuff</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Parent__c</fullName>
        <label>Other Parent</label>
        <referenceTo>Other</referenceTo>
        <relationshipLabel>Stuff</relationshipLabel>
        <relationshipName>Stuff</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>